syntax = "proto3";
package chorus;
option go_package = ".;chorus";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "authorization.proto";
import "public_endpoint.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
        title: "chorus authorization service";
        version: "1.0";
        contact: {
            name: "chorus authorization service";
            url: "https://github.com/CHORUS-TRE/chorus-backend";
            email: "dev@chorus-tre.ch";
        };
    };
    schemes: HTTP;
    consumes: "application/json";
    produces: "application/json";
};

// List Roles
message ListRolesRequest {}
message ListRolesReply {
    ListRolesResult result = 1;
}
message ListRolesResult {
    repeated AuthorizationRole roles = 1;
}

// List Permissions
message ListPermissionsRequest {}
message ListPermissionsReply {
    ListPermissionsResult result = 1;
}
message ListPermissionsResult {
    repeated AuthorizationPermission permissions = 1;
}

service AuthorizationService {
    rpc ListRoles(ListRolesRequest) returns (ListRolesReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/authorization/roles"
        };
        option (public_endpoint) = true;
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List roles";
            description: "This endpoint returns a list of all available roles";
            tags: "AuthorizationService";
            security: {};
        };
    };

    rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsReply) {
        option (google.api.http) = {
            get: "/api/rest/v1/authorization/permissions"
        };
        option (public_endpoint) = true;
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List permissions";
            description: "This endpoint returns a list of all available permissions";
            tags: "AuthorizationService";
            security: {};
        };
    };
}
